syntax = "proto3";

option csharp_namespace = "NambaDoctor.Proto.v1";

package nambadoctor.v1;

service AllergyWorkerv1 {
	rpc GetAllergyofAppointment(AllergyForAppointmentRequest) returns (AllergyObject);
	rpc GetAllergyofPatient(AllergyPat) returns (AllergyObject);
	rpc SaveNewAllergy(AllergyObject) returns(AllergyResponse);
}

message AllergyObject{
	string ID = 1;
	string Allergies = 2;
	string PatientId = 3;
	string AppointmentId = 4;
	int64 CreatedDateTime = 5;
}

message AllergyForAppointmentRequest{
	string AppointmentId = 1;
}

message AllergyPat{
	string PatientId = 1;
}

message AllergyResponse{
	string AllergyId = 1;
}